--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -9,7 +9,7 @@
         type="text"
         class="form-control"
         id="username"
-        name="Username"
+        name="username"
         placeholder="Enter username"
       />
     </div>
