--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -1,5 +1,31 @@
 {% extends "base.html" %} {% block title %}Home{% endblock %}
 
 {% block content %}
-<h1>This is the home page</h1>
+<h1 align="center">Customers</h1>
+<ul class="list-group list-group-flush" id="customers">
+    {% for customer in user.customers %}
+    <li class="list-group-item">{{ customer.customerName }}</li>"
+    <li class="list-group-item">{{ customer.customerPackage }}</li>"
+    <li class="list-group-item">{{ customer.customerDOJ }}
+        <button type="button" class="close" onclick="deleteCustomer({{ customer.id }})">
+            <span aria-hidden="true">&times;</span>
+        </button>
+    </li>"
+    {% endfor %}
+</ul>
+<form method="POST">
+    <div class="form-group">
+        <label for="customerName">Customer name:</label>
+        <input type="text" class="form-control" id="customerName">
+      </div>
+      <div class="form-group">
+        <label for="customerPackage">Customer package:</label>
+        <input type="text" class="form-control" id="customerPackage">
+      </div>
+      <div class="form-group">
+        <label for="customerDOJ">Date of join:</label>
+        <input type="date" class="form-control" id="customerDOJ">
+      </div>
+      <button type="submit" class="btn btn-primary">Submit</button>
+</form>>
 {% endblock %}
