--- a/website/templates/login.html
+++ b/website/templates/login.html
@@ -25,6 +25,7 @@
     </div>
       <br />
       <button type="submit" class="btn btn-primary">Login</button>
+        <a href="/reset_request">Forgot Password?</a>
     </div>
   </form>
 {% endblock %}
